Update of configuration section.

--- a/rapport_08_decembre/rapport_2.tex
+++ b/rapport_08_decembre/rapport_2.tex
@@ -166,11 +166,19 @@ Administrators can create and delete user accounts. If a user lost his password,
 
 \subsection{Administration of other Administrators}
 Administrators are able to create an administrator account, or to suspend the account of another administrator.
+
 \subsection{Data diode Installation and Configuration}
+At first use, the data diode automatically runs all its programs with default values. Each relevant value, such as IP address or open ports can be modified manually in a configuration file.
+
 \subsubsection{Installation}
-The data-diode is provided to the client with the programs already installed, and a default administrator account. At first use, the password needs to be modified.
+The data-diode is provided to the client with the programs already installed, and a default administrator account. At first use, the password needs to be modified.\\
+
+The machine works with the default IP address \textbf{192.168.1.1}. The IP can be later changed manually.
+
 \subsubsection{Configuration}
 The data-diode settings will be specified in a configuration file that can be modified manually.
+
+
 \section{Risk analysis}
 In this section, we assess risk and describe how to manage it. This implies identifying threat sources, the components (or resources) as well as the potential impact that an attack on a component would have.
 
